[gd_scene load_steps=3 format=4 uid="uid://s2ng0og2b627"]

[ext_resource type="PackedScene" uid="uid://ch1hh04p5qvav" path="res://Prefab/GUI/LevelEditor/Inspector/Properties/Type/Base/PropertiesBase.tscn" id="1"]
[ext_resource type="Script" uid="uid://b6trma2herhav" path="res://Prefab/GUI/LevelEditor/Inspector/Properties/Type/ArrayVector2/PropertiesArrayVector2.gd" id="2"]

[node name="PropertiesVector2" instance=ExtResource("1")]
light_mask = 0
offset_right = 83.0
offset_bottom = 66.0
script = ExtResource("2")

[node name="Prefab" type="HBoxContainer" parent="." index="1"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="IndexLabel" type="Label" parent="Prefab" index="0"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Prefab" index="1"]
light_mask = 0
layout_mode = 2
size_flags_horizontal = 3

[node name="SpinBoxX" type="SpinBox" parent="Prefab/VBoxContainer" index="0"]
light_mask = 0
layout_mode = 2
min_value = -99999900000.0
max_value = 99999900000.0
step = 0.01
prefix = "x:"

[node name="SpinBoxY" type="SpinBox" parent="Prefab/VBoxContainer" index="1"]
light_mask = 0
layout_mode = 2
min_value = -99999900000.0
max_value = 99999900000.0
step = 0.01
prefix = "y:"

[node name="RemoveButton" type="Button" parent="Prefab" index="2"]
custom_minimum_size = Vector2(31, 31)
layout_mode = 2
size_flags_vertical = 4
text = "x"

[node name="VBoxContainer" type="VBoxContainer" parent="." index="2"]
layout_mode = 2

[node name="Root" type="VBoxContainer" parent="VBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2

[node name="AddButton" type="Button" parent="VBoxContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "添加元素"

[connection signal="value_changed" from="Prefab/VBoxContainer/SpinBoxX" to="." method="ValueChange"]
[connection signal="value_changed" from="Prefab/VBoxContainer/SpinBoxY" to="." method="ValueChange"]
